--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/TomocaMoviesWebsite.csproj
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/TomocaMoviesWebsite.csproj
@@ -166,6 +166,7 @@
     <Content Include="Content\bootstrap-theme.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\choose-seats.css" />
     <Content Include="Content\cssAmin\PagedList.css" />
     <Content Include="Content\cssAmin\SiteAdmin.css" />
     <Content Include="Content\cssAmin\styleAdmin.css" />
@@ -242,6 +243,7 @@
     <Content Include="Content\image\reviews3.png" />
     <Content Include="Content\image\robbot.png" />
     <Content Include="Content\image\SB_JodieFoster.jpg" />
+    <Content Include="Content\image\Screen.png" />
     <Content Include="Content\image\seeall.png" />
     <Content Include="Content\image\shield.png" />
     <Content Include="Content\image\slider.PNG" />
@@ -252,6 +254,7 @@
     <Content Include="Content\image\ticket2.png" />
     <Content Include="Content\image\Tomoca.png" />
     <Content Include="Content\image\twitter.png" />
+    <Content Include="Content\image\Vector 2.png" />
     <Content Include="Content\image\Vectorleft.png" />
     <Content Include="Content\image\Vectorright.png" />
     <Content Include="Content\image\youtube.png" />
@@ -426,6 +429,7 @@
       <DependentUpon>TomocaMovies.dbml</DependentUpon>
     </None>
     <None Include="Scripts\jquery-3.4.1.intellisense.js" />
+    <Content Include="Scripts\choose-seats.js" />
     <Content Include="Scripts\jquery-3.4.1.js" />
     <Content Include="Scripts\jquery-3.4.1.min.js" />
     <Content Include="Scripts\jquery-3.4.1.slim.js" />
