--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/bin/TomocaMoviesWebsite.dll.config
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/bin/TomocaMoviesWebsite.dll.config
@@ -5,13 +5,15 @@
   -->
 <configuration>
   <connectionStrings>
-	  <add name="TomocaMoviesConnectionString1" connectionString="Data Source=DESKTOP-05M8TQE\LOCAL;Initial Catalog=dbTomoca;Integrated Security=True"
+    <add name="TomocaMoviesConnectionString1" connectionString="Data Source=DESKTOP-05M8TQE\LOCAL;Initial Catalog=dbTomoca;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="TomocaMoviesConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=dbTomoca;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="dbTomocaConnectionString" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=dbTomoca;Integrated Security=True"
       providerName="System.Data.SqlClient" />
     <add name="dbTomocaConnectionString1" connectionString="Data Source=ROLLER\SQLEXPRESS;Initial Catalog=dbTomoca;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
+    <add name="TomocaDBConnectionString" connectionString="Data Source=DESKTOP-05M8TQE\LOCAL;Initial Catalog=TomocaDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
