--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/TomocaMoviesWebsite.csproj
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/TomocaMoviesWebsite.csproj
@@ -512,11 +512,12 @@
     <Content Include="Views\Admin\TinTuc.cshtml" />
     <Content Include="Views\Admin\ThemTinTuc.cshtml" />
     <Content Include="Views\Users\profile.cshtml" />
-    <Content Include="Views\adminmanager\ThemPhimDC.cshtml" />
     <Content Include="Views\adminmanager\phimSC.cshtml" />
     <Content Include="Views\adminmanager\phimdangchieu.cshtml" />
     <Content Include="Views\adminmanager\datve.cshtml" />
     <Content Include="Views\Tomoca\Ticket_PartialPage1.cshtml" />
+    <Content Include="Views\adminmanager\ThemPhimDC.cshtml" />
+    <Content Include="Views\adminmanager\ThemChiTiet.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
