--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/TomocaMoviesWebsite.csproj
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/TomocaMoviesWebsite.csproj
@@ -519,7 +519,7 @@
     <Content Include="Views\adminmanager\phimSC.cshtml" />
     <Content Include="Views\adminmanager\phimdangchieu.cshtml" />
     <Content Include="Views\adminmanager\datve.cshtml" />
-    <Content Include="Views\Tomoca\Ticket_PartialPage1.cshtml" />
+    <Content Include="Views\Tomoca\choose.cshtml" />
     <Content Include="Views\adminmanager\ThemPhimDC.cshtml" />
     <Content Include="Views\adminmanager\ThemChiTiet.cshtml" />
     <Content Include="Views\Tomoca\TicketBook.cshtml" />
