--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Web.config
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Web.config
@@ -15,6 +15,8 @@
       providerName="System.Data.SqlClient" />
     <add name="TomocaDBConnectionString" connectionString="Data Source=DESKTOP-05M8TQE\LOCAL;Initial Catalog=TomocaDB;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="newDBTomocaConnectionString" connectionString="Data Source=DESKTOP-05M8TQE\LOCAL;Initial Catalog=newDBTomoca;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
