--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/TomocaMoviesWebsite.csproj
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/TomocaMoviesWebsite.csproj
@@ -167,6 +167,7 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\choose-seats.css" />
+    <Content Include="Scripts\choose.js" />
     <Content Include="Content\cssAmin\PagedList.css" />
     <Content Include="Content\cssAmin\SiteAdmin.css" />
     <Content Include="Content\cssAmin\styleAdmin.css" />
