--- a/TomocaMoviesWebsite/TomocaMoviesWebsite/Web.config
+++ b/TomocaMoviesWebsite/TomocaMoviesWebsite/Web.config
@@ -17,6 +17,8 @@
       providerName="System.Data.SqlClient" />
     <add name="newDBTomocaConnectionString" connectionString="Data Source=DESKTOP-05M8TQE\LOCAL;Initial Catalog=newDBTomoca;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="DBTomocaUpdateConnectionString" connectionString="Data Source=DESKTOP-05M8TQE\LOCAL;Initial Catalog=DBTomocaUpdate;Integrated Security=True"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
